Issue #187 - some cleanups from @profes